# rs-crypto

./: Cargo.toml  README.md  build.rs  justfile
.github/workflows/: ci.yml  release.yml
csrc/: nessie.h  rand.c  rand.h  standard.h  whirlpool.c  xtea.c  xtea.h
src/: huffman.rs  isaac.rs  lib.rs  rsa.rs  whirlpool.rs  xtea.rs
