[package]
name = "rs-crypto"
version = "0.2.0"
edition = "2024"
authors = ["RustCityRS"]
description = "Cryptographic Primitives: ISAAC, RSA, XTEA, Huffman, Whirlpool"
license = "MIT"
repository = "https://github.com/RustCityRS/rs-crypto"
homepage = "https://github.com/RustCityRS/rs-crypto"
readme = "README.md"
include = ["src/**/*", "csrc/**/*", "build.rs", "LICENSE.md", "README.md"]

[build-dependencies]
cc = "1.2"

[dependencies]
simple_asn1 = "0.6"
base64 = "0.22"
num-bigint = "0.4"

[dev-dependencies]
